# tracksim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: 1_simulating_a_traffic_network.ipynb  2_simulating_an_electric_vehicle.ipynb  2_simulating_an_electric_vehicle_with_an_ECM.ipynb  3_simulating_an_electric_vehicle_with_an_LPV.ipynb
examples/example_SUMO_scenarios/Geldrop/: osm.passenger.trips.xml
src/tracksim/: cell_models.py  example_trips.py  pack_models.py  temperature_models.py  tracksim.py  utils.py  vehicle_models.py
src/tracksim/PyBatteryID_models/: model_n,l=3,4.npy
src/tracksim/battery_data/: Sheikh2025_OCV.npy  Weinreich2026_OCV_15deg.csv  Weinreich2026_OCV_25deg.csv  Weinreich2026_OCV_35deg.csv  Zheng2024_OCV.npy
