[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytracksim"
version = "0.0.1-alpha"
authors = [
  { name="Nicolai Weinreich", email="nawe@energy.aau.dk" },
]
description = "A multilevel battery simulation tool for realistic battery cell data"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
"libsumo >= 1.20",
"pandas > 2.0",
"numpy" > 1.0",
"tqdm > 4.0"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages= ["src/tracksim"]